src/regression/parse_pool/progtest5.sfp.out

sfc in program: parse_pool/progtest5.sfp
syntax error at 2 at line:
configuration hello { or nothing } 
                      ^
