src/regression/parse_pool/progtest5.sfp
# Testing erroneous program definition (invalid application)
configuration hello { or nothing } 
start hello

